@@ -2,6 +2,7 @@ a.out
 FvwmTransFocus
 cdiff
 cutcom
+infinite-logger
 load
 malloc
 mpd-state
