@@ -1,6 +1,6 @@
 
                      Tiny Applications Collection
-                     $Date: 2005/07/02 15:30:00 $
+                     $Date: 2005/07/02 18:41:02 $
 
 Tiny Applications Collection is a set of small programs, shell scripts
 and other  things which may be  usefull in everyday life  ;) There are
@@ -35,6 +35,9 @@ At the moment the collection include:
  * FvwmTransFocus - an FVWM module which changes windows' opacity
    depending on focus.  Whn window looses focus it becomes more
    transparent which looks "cool" ;) .
+
+ * infinite-logger - loggs every logged message including the messages
+   logget by itself :]
 
  * installkernel - pretty complex script for installing the Linux
    kernel.  It makes a lot of aspects of upgrading the kernel
